integration tests (app)